tests/ui/error-codes/E0253.stderr
error[E0253]: `SomeType` is not directly importable
  --> $DIR/E0253.rs:7:5
   |
LL | use foo::MyTrait::SomeType;
   |     ^^^^^^^^^^^^^^^^^^^^^^ cannot be imported directly

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0253`.
